@@ -81,6 +81,7 @@ typedef enum
   GEARMAN_DATA_TOO_LARGE,
   GEARMAN_INVALID_FUNCTION_NAME,
   GEARMAN_INVALID_WORKER_FUNCTION,
+  GEARMAN_NO_REGISTERED_FUNCTION,
   GEARMAN_NO_REGISTERED_FUNCTIONS,
   GEARMAN_NO_JOBS,
   GEARMAN_ECHO_DATA_CORRUPTION,
