@@ -6,8 +6,13 @@
  * Options that are internal can no longer be set by external
    callers.
  * Deprecated gearman_client_set_event_watch_fn() and
-   gearman_worker_set_event_watch_fn.
- * gearman_job_handle() and  gearman_job_function_name() now return const char* 
+   gearman_worker_set_event_watch_fn.  
+   
+ * gearman_job_handle() and gearman_job_function_name() now return const char* pointers 
+
+ * gearman_worker_unregister now returns GEARMAN_NO_REGISTERED_FUNCTION if the function does not exist (or is being removed)
+
+ * Added gearman_worker_function_exist()
 
 0.12 - 2010-01-??
  * Fixed job handle comparison bug with WORK_FAIL responses.
